src/kubernetes/service.yaml
---
kind: Service
apiVersion: v1
metadata:
  name: php-example-service
spec:
  selector:
    app: php-example
  type: NodePort
  ports:
    - protocol: TCP
      port: 80
      targetPort: 80
