src/kubernetes/ingress.yaml
---
apiVersion: extensions/v1beta1
kind: Ingress
metadata:
    name: ${CICD_IMAGE}-ingress
    annotations:
      allow.http: "false"
spec:
    rules:
    - host: ${CICD_IMAGE}.rancher.ish-labs.com
      http:
        paths:
        - path: /
        backend:
            serviceName: ${CICD_IMAGE}-service
            servicePort: 80
